[package]
name = "reman"
version = "0.1.0"
authors = ["fvcg"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
dialoguer = "0.7.1"
ansi_term = "0.12.1"
serde = { versio = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
